# ITADataSources

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
apps/ita_whad/: CMakeLists.txt  main.cpp
external_libs/: CMakeLists.txt
include/: ITAAsioInterface.h  ITABufferDataSink.h  ITABufferDataSource.h  ITADataSource.h  ITADataSourceDelegator.h  ITADataSourceRealization.h  ITADataSourceUtils.h  ITADataSourcesDefinitions.h  ITAFileDataSink.h  ITAFileDataSource.h  ITAJACKInterface.h  ITANetAudioClient.h  ITANetAudioConnection.h  ITANetAudioMessage.h  ITANetAudioProtocol.h  ITANetAudioSampleServer.h  ITANetAudioServer.h  ITANetAudioStream.h  ITANetAudioStreamingClient.h  ITANetAudioStreamingServer.h  ITAPeakDetector.h  ITAPortaudioInterface.h  ITARMSDetector.h  ITAStreamAmplifier.h  ITAStreamDetector.h  ITAStreamFilter.h  ITAStreamFunctionGenerator.h  ITAStreamInfo.h  ITAStreamModalSynthesizer.h  ITAStreamMultiplier1N.h  ITAStreamPatchBay.h  ITAStreamProbe.h  ITAStreamProperties.h  ITAStreamPump.h  ITAStreamYJunction.h
src/: ITAAsioInterface.cpp  ITABufferDataSink.cpp  ITABufferDataSource.cpp  ITADataSource.cpp  ITADataSourceRealization.cpp  ITADataSourceUtils.cpp  ITAFileDataSink.cpp  ITAFileDataSource.cpp  ITAJACKInterface.cpp  ITANetAudioClient.cpp  ITANetAudioClient.h  ITANetAudioConnection.cpp  ITANetAudioMessage.cpp  ITANetAudioMessage.h  ITANetAudioProtocol.cpp  ITANetAudioProtocol.h  ITANetAudioSampleServer.cpp  ITANetAudioServer.cpp  ITANetAudioServer.h  ITANetAudioStream.cpp  ITANetAudioStreamingClient.cpp  ITANetAudioStreamingClient.h  ITANetAudioStreamingServer.cpp  ITAPeakDetector.cpp  ITAPortaudioInterface.cpp  ITARMSDetector.cpp  ITAStreamAmplifier.cpp  ITAStreamDetector.cpp  ITAStreamFilter.cpp  ITAStreamFunctionGenerator.cpp  ITAStreamModalSynthesizer.cpp  ITAStreamMultiplier1N.cpp  ITAStreamPatchBay.cpp  ITAStreamProbe.cpp  ITAStreamProperties.cpp  ITAStreamPump.cpp  ITAStreamYJunction.cpp
tests/: BufferDataSourceTest  BufferDataSourceTest.cpp  CMakeLists.txt  DatasourceUtilsTest  DatasourceUtilsTest.cpp  FileDataSourceTest  FileDataSourceTest.cpp  FilterTest.cpp  Patchbay1Test.cpp  PeakDetectorTest  PeakDetectorTest.cpp  StreamDetectorTest.cpp  StreamFunctionGeneratorTest  StreamFunctionGeneratorTest.cpp  StreamPatchbayTest  StreamPatchbayTest.cpp  StreamProbeTest  StreamProbeTest.cpp  YJunctionTest.cpp
tests/AsioTests/: AsioTest.cpp  CMakeLists.txt  NativeAsioSingleInstanceTest.cpp  NativeAsioThreadedMultiInstanceTest.cpp  ReciprocalDAADLatencyMeasurement.cpp
tests/ITAAsioTests/: CMakeLists.txt  ListDevices.cpp  Loopback.cpp  Loopback2.cpp  Measure.cpp  Play.cpp  Record.cpp  Resource.h  Stability01.cpp  Stability02.cpp  Stability03.cpp  Stability04.cpp  ThreadInit.cpp
tests/ITAJACKTests/: CMakeLists.txt  ITAJackLoopback.cpp  ITAJackPlayback.cpp  run-jack-test.sh
tests/ITAPortaudioTests/: CMakeLists.txt  ITAPortaudioInterfaceGUI.cpp  ITAPortaudioInterfaceRecorder  ITAPortaudioInterfaceRecorder.cpp  ITAPortaudioInterfaceTest  ITAPortaudioInterfaceTest.cpp  ITAPortaudioMeasurementTest  ITAPortaudioMeasurementTest.cpp  ITAPortaudioMeasurement_ExcitationSignal.m  ReciprocalDAADLatencyMeasurement.cpp  ReciprocalDAADLatencyMeasurement.m
tests/NetAudio/: CMakeLists.txt  CMakeLists.txt_  ITANABufferServerTest  ITANABufferServerTest.cpp  ITANAPlayerTest  ITANAPlayerTest.cpp  ITANetAudioClientTest.cpp  ITANetAudioSampleServerTest.cpp  ITANetAudioStreamingClientTest.cpp  ITANetAudioStreamingPortaudioClientTest.cpp  ITANetAudioStreamingServerTest  ITANetAudioStreamingServerTest.cpp  ITANetAudioTest  ITANetAudioTest.cpp  NatLogUnderruns.m  NetAudioLog.m  NetAudioLogLatency.m  NetAudioLog_Underruns.m  NetAudioServerLog.m  NetLogLatency.m  set_path_for_ITANetAudioTest.sh
tests/NetAudio/log/: NetAudioLog.m
tests/VistaNetTest/: CMakeLists.txt  ITAVistaNetClient  ITAVistaNetServer  ITAVistaNetTest  VistaNetClient.cpp  VistaNetServer.cpp  VistaNetTest.cpp
